@@ -7,6 +7,7 @@ ___________________________________________________________
 -- Version and Update Check URLs have changed with this release
 -- Earlier releases might not get notified about future changes
 
+-> Added php gd extension version to software overview (hajo)
 -> Changed fckeditor filebrowser to exclude basepath in local urls (hajo)
 -> Changed version check download target to show update packages (hajo)
 -> Fixed ckeditor image filebrowser for admins in bbcode mode (hajo)
